# airstrike-3d-playground

./: .gitignore  CMakeLists.txt  README.md  \  readme.md
2.06/: CMakeLists.txt  config.ini  newsletter.url
2.06/Manual/: credits.html  faq.html  index.html  mainmenu.html  weapons.html
2.06/data/: pak1.apk
2.06/game/: gametonic.url  tellfriend.url  uninstall.ini
2.06/game/Manual/: default-controls.html  full-version.html  support.html
cmake/: cpm-config.cmake
cmake/cpm/: glm-config.cmake  imgui-config.cmake
dumps/: readme.md
examples/: 02_decompiled_source.c  02_decrypted_save_no_misisons_completed.txt
game/: divogames.url
game/Manual/: items.html  systemreq.html
game/Manual/data/: styles.css
ghidra/: .gitignore
ghidra/airstrike-2.rep/: project.prp  projectState
ghidra/airstrike-2.rep/idata/: ~index.bak
ghidra/airstrike-2.rep/idata/00/: 00000006.prp
ghidra/airstrike-2.rep/user/: ~journal.bak
ghidra/airstrike-2.rep/user/00/: 00000006.prp
ghidra/airstrike-2.rep/user/00/~00000006.db/: db.10.gbf  db.2.gbf  db.3.gbf  db.4.gbf  db.5.gbf  db.6.gbf  db.7.gbf  db.8.gbf
samples/: 02_config.ini  02_decompiled_source.c
scripts/: decrypt_save.py  extract_apk.py  mdl_obj_converter.py  pack_apk.py  preview_apk.py  proton_airstrike_multiapp_launcher.bat  proton_debug_start.bat
src/: CMakeLists.txt  readme.md
src/bass/: CMakeLists.txt  bass_proxy.c  bass_proxy.cpp  bass_proxy.def  bass_stub.cpp  bass_stub.def
src/bass/toolchains/: mingw64.cmake
src/cmake/: cpm-config.cmake
src/cmake/cpm/: glad-config.cmake  imgui-config.cmake
src/overlay/: CMakeLists.txt  bass_proxy.cpp  bass_proxy.h  bass_proxy.hpp  dll_main.cpp
src/toolchains/: clang-win32.cmake  mingw32.cmake
